--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
 
-                    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" width="100%" height="100%"
-                        viewBox="0 0 1440 560">
+                    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1440 560">
                         <g fill="none" mask="url(&quot;#a&quot;)">
                             <path fill="#0b3772" d="M0 0h1440v560H0z" />
                             <path fill="#182f5d"
@@ -77,7 +76,7 @@
                         </g>
                         <defs>
                             <mask id="a">
-                                <path fill="#ffffff" width="100%" height="100%" d="M0 0h1440v560H0z" />
+                                <path fill="#ffffff" d="M0 0h1440v560H0z" />
                             </mask>
                         </defs>
                     </svg>
@@ -91,8 +90,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" width="100%" height="100%"
-                        viewBox="0 0 1440 560">
+                    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1440 560">
                         <g fill="none" mask="url(&quot;#a&quot;)">
                             <path fill="#0b3772" d="M0 0h1440v560H0z" />
                             <path stroke="rgba(51, 121, 194, 0.58)" stroke-width="2"
@@ -106,7 +104,7 @@
                         </g>
                         <defs>
                             <mask id="a">
-                                <path fill="#ffffff" width="100%" height="100%" d="M0 0h1440v560H0z" />
+                                <path fill="#ffffff" d="M0 0h1440v560H0z" />
                             </mask>
                         </defs>
                     </svg>
@@ -121,8 +119,7 @@
                 </div>
                 <div class="carousel-item">
 
-                    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" width="100%" height="100%"
-                        viewBox="0 0 1440 560">
+                    <svg xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="none" viewBox="0 0 1440 560">
                         <g fill="none" mask="url(&quot;#a&quot;)">
                             <path fill="url(#b)" d="M0 0h1440v560H0z" />
                             <path stroke="url(#c)" stroke-linecap="round" stroke-width="10" d="M915 239 914-2"
@@ -221,7 +218,7 @@
                                 <stop offset="1" stop-color="rgba(90, 131, 199, 1)" />
                             </linearGradient>
                             <mask id="a">
-                                <path fill="#ffffff" width="100%" height="100%" d="M0 0h1440v560H0z" />
+                                <path fill="#ffffff" d="M0 0h1440v560H0z" />
                             </mask>
                         </defs>
                     </svg>
